#XNet/CMakeLists.txt
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(XNet)

#版本号，注意0会导致CONFIGURE_FILE替换@VAR@失败
SET(XSERVER_VERSION_MAJOR 1)
SET(XSERVER_VERSION_MINOR 1)
SET(XSERVER_VERSION_BUILD 1)
SET(XSERVER_VERSION "${XSERVER_VERSION_MAJOR}.${XSERVER_VERSION_MINOR}.${XSERVER_VERSION_BUILD}")

#ADD_SUBDIRECTORY(chat)
ADD_SUBDIRECTORY(web)

#ELSE(WIN32)之类的语句很容易引起歧义，可以这样消除这个问题
SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)
#然后可以这样使用
IF(WIN32)
	MESSAGE(STATUS "PATH: $ENV{PATH}")
	MESSAGE(STATUS "HOME: $ENV{HOME}")
ELSE()
	MESSAGE(STATUS "PATH: $ENV{PATH}")
	MESSAGE(STATUS "HOME: $ENV{HOME}")
ENDIF()

